Perkin-UAT/force-app/main/default/objects/Template_Data__c/Template_Data__c.object-meta.xml
<CustomObject>
    <description>This object holds data to be included in quote templates.</description>
    <label>Template Data</label>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>