Perkin-UAT/force-app/main/default/objects/Template_Data__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>It is used to store the PKI Company&#39;s address. (S-692500)</description>
    <inlineHelpText>It is used to store the PKI Company&#39;s address.</inlineHelpText>
    <label>Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>