Perkin-UAT/force-app/main/default/objects/Template_Data__c/fields/CPQ_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CPQ_External_ID__c</fullName>
    <description>It is used for CPQ Data Loads. (Source: S-692500)</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>