Perkin-UAT/force-app/main/default/objects/Template_Data__c/fields/Display_Country_of_Ultimate_Destination__c.field-meta.xml
<CustomField>
    <fullName>Display_Country_of_Ultimate_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field decides whether to print Country of Ultimate Destination on PDF Quote. (I-428416)</description>
    <inlineHelpText>This field decides whether to print Country of Ultimate Destination on PDF Quote.</inlineHelpText>
    <label>Display Country of Ultimate Destination</label>
    <type>Checkbox</type>
</CustomField>