Perkin-UAT/force-app/main/default/objects/Template_Data__c/fields/Display_Self_Service_Link__c.field-meta.xml
<CustomField>
    <fullName>Display_Self_Service_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to display the Service Portal Link in the quote template. (S-692500)</description>
    <inlineHelpText>This field is used to display the Service Portal Link in the quote template.</inlineHelpText>
    <label>Display Self-Service Link</label>
    <type>Checkbox</type>
</CustomField>