Perkin-UAT/force-app/main/default/objects/Template_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template_Key__c</columns>
    <columns>Small_Pack_Return_CC_Email__c</columns>
    <columns>Large_Pack_Return_CC_Email__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>